infra/k8s/client-depl.yaml
apiVersion: apps/v1                     
kind: Deployment                          
metadata:                          
  name: client-depl                      
spec: 
  replicas : 1        
  selector:           
    matchLabels:
      app: client    
  template:           
    metadata:
      labels:
        app: client  
    spec: 
      containers:
        - name: client                  
          image: vagmaz/client    

---
# configuration service for client. We write here instead of creating new file. Both approaches are correct

apiVersion: v1                     
kind: Service                          
metadata:                          
  name: client-srv                      
spec: 
  #type: ClusterIP when we want clusterIP itsn't necessary to put it. Its the default behaviour
  selector:  # spesify  which pods to expose on the outside word
    app: client
  ports: 
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
