infra/k8s/comments-depl.yaml
apiVersion: apps/v1                     
kind: Deployment                          
metadata:                          
  name: comments-depl                      
spec: 
  replicas : 1        
  selector:           
    matchLabels:
      app: comments    
  template:           
    metadata:
      labels:
        app: comments  
    spec: 
      containers:
        - name: comments                  
          image: vagmaz/comments    

---
# configuration service for comments. We write here instead of creating new file. Both approaches are correct

apiVersion: v1                     
kind: Service                          
metadata:                          
  name: comments-srv                      
spec: 
  #type: ClusterIP when we want clusterIP itsn't necessary to put it. Its the default behaviour
  selector:  # spesify  which pods to expose on the outside word
    app: comments
  ports: 
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
