infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1                     
kind: Deployment                          
metadata:                          
  name: event-bus-depl                      
spec: 
  replicas : 1        
  selector:           
    matchLabels:
      app: event-bus    
  template:           
    metadata:
      labels:
        app: event-bus  
    spec: 
      containers:
        - name: event-bus                  
          image: vagmaz/event-bus    

---
# configuration service for event-bus. We write here instead of creating new file. Both approaches are correct

apiVersion: v1                     
kind: Service                          
metadata:                          
  name: event-bus-srv                      
spec: 
  #type: ClusterIP when we want clusterIP itsn't necessary to put it. Its the default behaviour
  selector:  # spesify  which pods to expose on the outside word
    app: event-bus
  ports: 
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
