infra/k8s/moderation-depl.yaml
apiVersion: apps/v1                     
kind: Deployment                          
metadata:                          
  name: moderation-depl                      
spec: 
  replicas : 1        
  selector:           
    matchLabels:
      app: moderation    
  template:           
    metadata:
      labels:
        app: moderation  
    spec: 
      containers:
        - name: moderation                  
          image: vagmaz/moderation    

---
# configuration service for moderation. We write here instead of creating new file. Both approaches are correct

apiVersion: v1                     
kind: Service                          
metadata:                          
  name: moderation-srv                      
spec: 
  #type: ClusterIP when we want clusterIP itsn't necessary to put it. Its the default behaviour
  selector:  # spesify  which pods to expose on the outside word
    app: moderation
  ports: 
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
