infra/k8s/posts-depl.yaml
apiVersion: apps/v1                     
kind: Deployment                          
metadata:                          
  name: posts-depl                      
spec: 
  replicas : 1        # number of pods we want to create   
  selector:           # find all the pods that have been created and get the ones with <posts>
    matchLabels:
      app: posts    
  template:           #confg for the pods -like the conf on post.yaml
    metadata:
      labels:
        app: posts   # identifier
    spec: 
      containers:
        - name: posts                  
          image: vagmaz/posts    # OR  image: vagmaz/posts:latest  

---


apiVersion: v1                     
kind: Service                          
metadata:                          
  name: posts-clusterip-srv                      
spec: 
  selector: 
    app: posts
  ports: 
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
