infra/k8s/query-depl.yaml
apiVersion: apps/v1                     
kind: Deployment                          
metadata:                          
  name: query-depl                      
spec: 
  replicas : 1        
  selector:           
    matchLabels:
      app: query    
  template:           
    metadata:
      labels:
        app: query  
    spec: 
      containers:
        - name: query                  
          image: vagmaz/query    

---
# configuration service for query. We write here instead of creating new file. Both approaches are correct

apiVersion: v1                     
kind: Service                          
metadata:                          
  name: query-srv                      
spec: 
  #type: ClusterIP when we want clusterIP itsn't necessary to put it. Its the default behaviour
  selector:  # spesify  which pods to expose on the outside word
    app: query
  ports: 
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
